<resources>
    <string name="app_name">ScooterSharing</string>

    <string name="name_field">Name: </string>
    <string name="location_field">Location: </string>

    <string name="start_ride">Start ride </string>
    <string name="update_ride">Update ride </string>

    <string name="title_activity_start_ride">StartRideActivity</string>
    <string name="title_activity_update_ride">UpdateRideActivity</string>

    <string name="list_rides">List Rides</string>
    <string name="s_name">%s</string>
    <string name="s_location">%s</string>
    <string name="s_time">%s</string>

    <string name="enter_scooter_name">Enter scooter name</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="scooter_name">Scooter name</string>
    <string name="enter_your_new_location">Enter your new location</string>
    <string name="scooter_location">Scooter location</string>
    <string name="scooter_time">Scooter time</string>

    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>

    <string name="end_ride">End ride</string>
    <string name="delete_ride">Delete Ride</string>
    <string name="search_ride">Search Ride</string>
    <string name="delete_ride_title">DELETE RIDE</string>

    <string name="list_of_scooters">List of Scooters</string>
    <string name="register_new_scooter">Register New Scooter</string>

    <string name="firebase_user_description">You are already logged in as %s, you need to log out before logging in as different user.</string>
    <string name="action_sign_out">Sign out</string>
    <string name="content_description_sign_out">Sign out</string>
    <string name="content_description_image">Image</string>
    <string name="firebase_authentication">Firebase\nAuthentication</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyABOf9MEzajhQOZSd52gRH4Ivj4CUn4Pl8</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_view_location">Location Image</string>
    <string name="latitude_text">Latitude</string>
    <string name="longitude_text">Longitude</string>
    <string name="time_text">Time</string>
    <string name="content_description_location">Location Image</string>
    <string name="capture_button_alt">Capture Picture</string>
    <string name="qr">QR</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="availability">Availability</string>
    <string name="battery">Battery</string>
    <string name="scooter_available">Available</string>
    <string name="scooter_not_available">Not available</string>
    <string name="rides_history">Rides History</string>
    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string>
    <string name="donate_with_googlepay_button_content_description">Donate With Google Pay</string>
    <string name="pay_with_googlepay_button_content_description">Pay With Google Pay</string>
    <string name="subscribe_with_googlepay_button_content_description">Subscribe With Google Pay</string>
    <string name="book_with_googlepay_button_content_description">Book With Google Pay</string>
    <string name="checkout_with_googlepay_button_content_description">Checkout With Google Pay</string>
    <string name="order_with_googlepay_button_content_description">Order With Google Pay</string>
    <string name="view_in_googlepay_button_content_description">View In Google Pay</string>

    <string name="unavailable">Unavailable</string>
    <string name="value_text">-</string>
    <string name="gravity_text">%.7f km/h\u00B2</string>
    <string name="speedometer">%.2f km/h</string>
    <string name="axis_x">X-Axis</string>
    <string name="axis_y">Y-Axis</string>
    <string name="axis_z">Z-Axis</string>
    <string name="rotation_x">X (Pitch)</string>
    <string name="rotation_y">Y (Roll)</string>
    <string name="rotation_z">Z (Yaw)</string>

</resources>