<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <Button
            android:id="@+id/start_ride_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/start_ride"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <Button
            android:id="@+id/update_ride_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/update_ride"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/list_rides_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/list_rides"
            />

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <!--        android:visibility="gone"-->

    </LinearLayout>

</LinearLayout>
